--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="js_vyspx73mx2pz.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite</title>
+    <title>lesson-3j</title>
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
