--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>lesson-3j</title>
   </head>
   <body>
+    <canvas></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
