--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>lesson-3j</title>
   </head>
   <body>
+    <div id="body">
+      
+    </div>
     <canvas></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
