--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lesson-3j</title>
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <div id="body">
       
     </div>
-    <canvas></canvas>
+    <canvas style="width: 1920px;"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
