--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>lesson-3j</title>
   </head>
   <body>
+    <div id="body">
       <span>
         pppppp
       </span>
-      
 
 
 
 
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
