--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <div id="body">
-      <span>
-        hallo
-      </span>
-
+      <div class="GLASSlOLLIPOPS_div">
+        привет qwertyuiop
+      </div>
 
     </div>
     <script type="module" src="/src/main.ts"></script>
