--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <div id="body">
       <div class="GLASSlOLLIPOPS_div">
         привет qwertyuiop
+        <span class="GLASSlOLLIPOPS_span">
+          lzteruyg
+        </span>
       </div>
+      <span class="GLASSlOLLIPOPS_span">
+        lzteruyg
+      </span>
 
     </div>
     <script type="module" src="/src/main.ts"></script>
