--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lesson-3j</title>
   </head>
+  <!--  class="GLASSlOLLIPOPS_div" -->
+  <!--  class="GLASSlOLLIPOPS_span" -->
+  <!--  class="GLASSlOLLIPOPS_header" -->
   <body>
     <div id="body">
+      <header class="GLASSlOLLIPOPS_header">
+
+      </header>
       <div class="GLASSlOLLIPOPS_div">
-        привет qwertyuiop
+        wwdhafkbol
         <span class="GLASSlOLLIPOPS_span">
-          lzteruyg
+          привет
         </span>
       </div>
-      <span class="GLASSlOLLIPOPS_span">
-        lzteruyg
-      </span>
-
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
