--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!--  class="GLASSlOLLIPOPS_span" -->
   <!--  class="GLASSlOLLIPOPS_header" -->
   <!--  class="GLASSlOLLIPOPS_button" -->
+  <!--  class="GLASSlOLLIPOPS_a" -->
   <body>
     <div id="body">
       <header class="GLASSlOLLIPOPS_header">
@@ -17,8 +18,11 @@
         <span class="GLASSlOLLIPOPS_span">
           привет
           <button class="GLASSlOLLIPOPS_button">
-  ulip
+            ulip
           </button>
+          <a class="GLASSlOLLIPOPS_a" href="https://andreyka101.github.io/collection-of-all-lessons/">
+            lwttrsd
+          </a>
           <span class="GLASSlOLLIPOPS_span">
             jyyjyjyjj
           </span>
@@ -26,11 +30,14 @@
         <button class="GLASSlOLLIPOPS_button">
           ulip
         </button>
+        <a class="GLASSlOLLIPOPS_a" href="https://andreyka101.github.io/collection-of-all-lessons/">
+          lwttrsd
+        </a>
       </header>
       
       <div class="GLASSlOLLIPOPS_div">
         <button class="GLASSlOLLIPOPS_button">
-  ulip
+          клик
         </button>
         wwdhafkbol
         <span class="GLASSlOLLIPOPS_span">
@@ -42,6 +49,7 @@
 
       
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.4/mobile-detect.min.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
