--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!--  class="GLASSlOLLIPOPS_header" -->
   <!--  class="GLASSlOLLIPOPS_button" -->
   <!--  class="GLASSlOLLIPOPS_a" -->
+  <!--  class="GLASSlOLLIPOPS_checkbox" -->
   <body>
     <div id="body">
       <header class="GLASSlOLLIPOPS_header">
@@ -21,7 +22,7 @@
             ulip
           </button>
           <a class="GLASSlOLLIPOPS_a" href="https://andreyka101.github.io/collection-of-all-lessons/">
-            lwttrsd
+          rrrrrrr
           </a>
           <span class="GLASSlOLLIPOPS_span">
             jyyjyjyjj
@@ -43,6 +44,11 @@
         <span class="GLASSlOLLIPOPS_span">
           привет
         </span>
+      </div>
+
+      <div class="GLASSlOLLIPOPS_div">
+        <input type="button" class="GLASSlOLLIPOPS_button" value="кнопка">
+        <input type="checkbox" class="GLASSlOLLIPOPS_checkbox">
       </div>
 
 
