--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <div class="GLASSlOLLIPOPS_div">
         <input type="button" class="GLASSlOLLIPOPS_button" value="кнопка">
         <input type="checkbox" class="GLASSlOLLIPOPS_checkbox">
+        <label for=""></label>
       </div>
 
 
