--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="js_vyspx73mx2pz.svg" />
+    <link rel="icon" type="image/svg+xml" href="/svg/js_vyspx73mx2pz.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lesson-3j</title>
   </head>
@@ -12,6 +12,7 @@
   <!--  class="GLASSlOLLIPOPS_button" -->
   <!--  class="GLASSlOLLIPOPS_a" -->
   <!--  class="GLASSlOLLIPOPS_checkbox" -->
+  <!--  class="GLASSlOLLIPOPS_color" -->
   <body>
     <div id="body">
       <header class="GLASSlOLLIPOPS_header">
@@ -48,8 +49,9 @@
 
       <div class="GLASSlOLLIPOPS_div">
         <input type="button" class="GLASSlOLLIPOPS_button" value="кнопка">
-        <input type="checkbox" class="GLASSlOLLIPOPS_checkbox">
-        <label for=""></label>
+        <input type="checkbox" id="check1" class="GLASSlOLLIPOPS_checkbox">
+        <label for="check1"></label>
+        <input type="color" class="GLASSlOLLIPOPS_color">
       </div>
 
 
