--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
       </header>
 
       <div class="GLASSlOLLIPOPS_div">
-        <div>
-          <span>
-            
-          </span>
+        <div style="padding-left: 30px; margin-bottom: 20px;">
+            старые задания
         </div>
+        <span class="GLASSlOLLIPOPS_span" id="block1">
+          <button class="GLASSlOLLIPOPS_button">
+            печатная машина
+          </button>
+          <a href="" class="GLASSlOLLIPOPS_a">
+            начать
+          </a>
+        </span>
       </div>
       
 
