--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </h1>
       </header>
 
-      <div class="GLASSlOLLIPOPS_div">
+      <!-- <div class="GLASSlOLLIPOPS_div">
         <div style="padding-left: 30px; margin-bottom: 20px;">
             старые задания
         </div>
@@ -33,6 +33,20 @@
           </button>
           <a href="" class="GLASSlOLLIPOPS_a">
             начать
+          </a>
+        </span>
+      </div> -->
+
+      <div class="GLASSlOLLIPOPS_div">
+        <div style="padding-left: 30px; margin-bottom: 20px;">
+          запросы
+        </div>
+        <span class="GLASSlOLLIPOPS_span" id="block2">
+          <span class="GLASSlOLLIPOPS_span">
+            поиск фильмов
+          </span>
+          <a href="./src/movie_search/movie.HTML" class="GLASSlOLLIPOPS_a">
+            открыть
           </a>
         </span>
       </div>
