--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
           <span class="GLASSlOLLIPOPS_span">
             поиск фильмов
           </span>
-          <a href="./src/movie_search/movie.HTML" class="GLASSlOLLIPOPS_a">
+          <a href="/src/movie_search/movie.HTML" class="GLASSlOLLIPOPS_a">
             открыть
           </a>
         </span>
+
       </div>
       
 
