--- a/src/movie_search/movie.HTML
+++ b/src/movie_search/movie.HTML
@@ -8,6 +8,6 @@
 </head>
 <body>
     
-    <script type="module" src="./movieTS.ts"></script>
+    <script type="module" src="movieTS.ts"></script>
 </body>
 </html>
