--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="GLASSlOLLIPOPS_span">
             поиск фильмов
           </span>
-          <a href="/src/movie_search/movie.HTML" class="GLASSlOLLIPOPS_a">
+          <a href="./src/movie_search/movie.html" class="GLASSlOLLIPOPS_a">
             открыть
           </a>
         </span>
