--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -6,8 +6,17 @@
     <title>movie search</title>
     <link rel="icon" type="image/svg+xml" href="/svg/js_vyspx73mx2pz.svg" />
 </head>
+<!--  class="GLASSlOLLIPOPS_div" -->
+<!--  class="GLASSlOLLIPOPS_span" -->
+<!--  class="GLASSlOLLIPOPS_header" -->
+<!--  class="GLASSlOLLIPOPS_button" -->
+<!--  class="GLASSlOLLIPOPS_a" -->
+<!--  class="GLASSlOLLIPOPS_checkbox" -->
+<!--  class="GLASSlOLLIPOPS_color" -->
 <body>
-    
+    <div class="GLASSlOLLIPOPS_div">
+
+    </div>
     <script type="module" src="/src/movie_search/movieTS.ts"></script>
 </body>
 </html>
