--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -11,11 +11,18 @@
 <!--  class="GLASSlOLLIPOPS_header" -->
 <!--  class="GLASSlOLLIPOPS_button" -->
 <!--  class="GLASSlOLLIPOPS_a" -->
-<!--  class="GLASSlOLLIPOPS_checkbox" -->
+<!--  class="GLASSlOLLIPOPS_input" -->
 <!--  class="GLASSlOLLIPOPS_color" -->
 <body>
-    <div class="GLASSlOLLIPOPS_div">
-
+    <div style="display: flex;">
+        <a href="/index.html" class="GLASSlOLLIPOPS_a" style="margin: 20px;">exit</a>
+    </div>
+    <div style="display: flex;">
+        <div class="GLASSlOLLIPOPS_div" style="display: flex;flex-direction: column;align-items: center;">
+                поиск фильмов
+            <input type="text" placeholder="название фильма " class="GLASSlOLLIPOPS_input" style="margin-top: 20px; margin-bottom: 30px;">
+            <button class="GLASSlOLLIPOPS_button">поиск</button>
+        </div>
     </div>
     <script type="module" src="/src/movie_search/movieTS.ts"></script>
 </body>
