--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -20,7 +20,7 @@
     <div style="display: flex;">
         <div class="GLASSlOLLIPOPS_div" style="display: flex;flex-direction: column;align-items: center;">
                 поиск фильмов
-            <input type="text" placeholder="название фильма " class="GLASSlOLLIPOPS_input" style="margin-top: 20px; margin-bottom: 30px;">
+            <input id="inp" type="text" placeholder="название фильма " class="GLASSlOLLIPOPS_input" style="margin-top: 20px; margin-bottom: 30px;">
             <button class="GLASSlOLLIPOPS_button">поиск</button>
         </div>
     </div>
