--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -14,7 +14,7 @@
 <!--  class="GLASSlOLLIPOPS_input" -->
 <body>
     <div style="display: flex; justify-content: space-between;">
-        <a href="/index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
+        <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
         <div style="display: flex; align-items: center;">
             <span id="checkboxSpan">русский</span>
             <input id="checkbox" type="checkbox" class="GLASSlOLLIPOPS_input">
