--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -34,8 +34,7 @@
             <button class="GLASSlOLLIPOPS_button">поиск</button>
         </div>
     </div>
-    <div id="add" style="display: flex; flex-wrap: wrap;
-    justify-content: center; max-width: 1350px; margin: 0 auto;">
+    <div id="add" style="display: flex; flex-wrap: wrap; justify-content: center; max-width: 1350px; margin: 0 auto;">
         <div class="GLASSlOLLIPOPS_div movieBlockFlex" style="width: 818px;">
             <div class="movieBlock">
 
@@ -64,8 +63,37 @@
                 <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
             </div>
         </div>
-        <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m1" style="">
-            <div class="movieBlock">
+        <div>
+
+            <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m1" style="">
+                <div class="movieBlock">
+                    <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg" alt="">
+                    <div>
+                        <span>
+                            название фильма
+                        </span>
+                        <span>
+                            1999
+                        </span>
+                        <span class="longText" style="display: none;">
+                            Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.
+                </span>
+                <span class="shortText">
+                    Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start ...
+                </span>
+            </div>
+        </div>
+        <div class="A2buttonBlock" style="display: none;">
+            <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
+            <button class="GLASSlOLLIPOPS_button">свернуть</button>
+            <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
+        </div>
+        <div class="buttonBlock" style="">
+            <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
+        </div>
+    </div>
+    <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m2" style="">
+        <div class="movieBlock">
             <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg" alt="">
             <div>
                 <span>
@@ -81,55 +109,31 @@
                     Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start ...
                 </span>
             </div>
-            </div>
-            <div class="A2buttonBlock" style="display: none;">
-                <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
-                <button class="GLASSlOLLIPOPS_button">свернуть</button>
-                <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
-            </div>
-            <div class="buttonBlock" style="">
-                <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
-            </div>
         </div>
-        <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m2" style="">
-            <div class="movieBlock">
-            <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg" alt="">
-            <div>
-                <span>
-                    название фильма
-                </span>
-                <span>
-                    1999
-                </span>
-                <span class="longText" style="display: none;">
-                    Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.
-                </span>
-                <span class="shortText">
-                    Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start ...
-                </span>
-            </div>
-            </div>
-            <div class="A2buttonBlock" style="display: none;">
-                <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
-                <button class="GLASSlOLLIPOPS_button">свернуть</button>
-                <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
-            </div>
-            <div class="buttonBlock" style="">
-                <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
-            </div>
+        <div class="A2buttonBlock" style="display: none;">
+            <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
+            <button class="GLASSlOLLIPOPS_button">свернуть</button>
+            <a href="" class="GLASSlOLLIPOPS_a">поиск на ENG.</a>
         </div>
+        <div class="buttonBlock" style="">
+            <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
+        </div>
+    </div>
+    </div>
+    <div>
+
         <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m3" style="">
             <div class="movieBlock">
-            <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg" alt="">
-            <div>
-                <span>
-                    название фильма
-                </span>
-                <span>
-                    1999
-                </span>
-                <span class="longText" style="display: none;">
-                    Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.
+                <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg" alt="">
+                <div>
+                    <span>
+                        название фильма
+                    </span>
+                    <span>
+                        1999
+                    </span>
+                    <span class="longText" style="display: none;">
+                        Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.
                 </span>
                 <span class="shortText">
                     Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start ...
@@ -147,21 +151,21 @@
         </div>
         <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m4" style="">
             <div class="movieBlock">
-            <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg" alt="">
-            <div>
-                <span>
-                    название фильма
-                </span>
-                <span>
-                    1999
-                </span>
-                <span class="longText" style="display: none;">
-                    Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.
-                </span>
-                <span class="shortText">
-                    Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start ...
-                </span>
-            </div>
+                <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg" alt="">
+                <div>
+                    <span>
+                        название фильма
+                    </span>
+                    <span>
+                        1999
+                    </span>
+                    <span class="longText" style="display: none;">
+                        Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start value to normal, but a specific value cannot be set via animation. When creating CSS scroll-driven animations, you need to declare animation-range-start after declaring any animation shorthand for it to take effect.
+                    </span>
+                    <span class="shortText">
+                        Note: animation-range-start is included in the animation shorthand as a reset-only value. This means that including animation resets a previously-declared animation-range-start ...
+                    </span>
+                </div>
             </div>
             <div class="A2buttonBlock" style="display: none;">
                 <a href="" class="GLASSlOLLIPOPS_a">поиск на РУС.</a>
@@ -172,6 +176,7 @@
                 <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
             </div>
         </div>
+    </div>
     </div>
     <script type="module" src="/src/movie_search/movieTS.ts"></script>
 </body>
