--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -15,6 +15,8 @@
 <!--  class="GLASSlOLLIPOPS_input" -->
 
 <body>
+    <img src="/svg/russia_am7b40toekzm.svg" style="display: none;" alt="">
+    <img src="/svg/united_states_8ryw89cqyxg0.svg" style="display: none;" alt="">
     <div style="display: flex; justify-content: space-between;">
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
         <div style="display: flex; align-items: center;">
@@ -38,7 +40,7 @@
         </div>
     </div>
     <div id="add" style="display: flex; flex-wrap: wrap; justify-content: center; max-width: 1350px; margin: 0 auto;">
-        <div class="GLASSlOLLIPOPS_div movieBlockFlex" style="width: 818px; display: none;">
+        <!-- <div class="GLASSlOLLIPOPS_div movieBlockFlex" style="width: 818px; display: none;">
             <div class="movieBlock">
 
                 <img src="https://m.media-amazon.com/images/M/MV5BNzNlZTZjMDctZjYwNi00NzljLWIwN2QtZWZmYmJiYzQ0MTk2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg"
@@ -78,6 +80,8 @@
                 <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
             </div>
         </div>
+
+
         <div style="display: flex; justify-content: center; flex-wrap: wrap;">
 
             <div class="GLASSlOLLIPOPS_div movieBlockFlex" id="m1" style="">
@@ -239,7 +243,7 @@
                     <button class="GLASSlOLLIPOPS_button expand">развернуть</button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <script type="module" src="/src/movie_search/movieTS.ts"></script>
 </body>
