--- a/src/movie_search/movie.html
+++ b/src/movie_search/movie.html
@@ -19,11 +19,11 @@
     <img src="/svg/united_states_8ryw89cqyxg0.svg" style="display: none;" alt="">
     <div style="display: flex; justify-content: space-between;">
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
-        <div style="display: flex; align-items: center;">
+        <!-- <div style="display: flex; align-items: center;">
             <span id="checkboxSpan">русский</span>
             <input id="checkbox" type="checkbox" class="GLASSlOLLIPOPS_input">
             <label for="checkbox"></label>
-        </div>
+        </div> -->
     </div>
     <div style="display: flex;">
         <div class="GLASSlOLLIPOPS_div" id="search" style="display: flex;flex-direction: column;align-items: center;">
