--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="body">
       <header class="GLASSlOLLIPOPS_header">
         <h1>
-          <a href="https://andreyka101.github.io/collection-of-all-lessons/" style="color:#ffffff; text-decoration: none;">
+          <a href="https://andreyka101.github.io/collection-of-all-lessons/" style="text-decoration: none;">
             lesson-3j
           </a>
         </h1>
