--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
           </a>
         </h1>
       </header>
+      
+      <div class="GLASSlOLLIPOPS_div">
+        <div style="padding-left: 30px; margin-bottom: 20px;">
+          гайд по созданию node JS сервера 
+        </div>
+        <span class="GLASSlOLLIPOPS_span" id="block2">
+          <span class="GLASSlOLLIPOPS_span">
+            all_packages-nodeJS
+          </span>
+          <a href="./src/all_packages-nodeJS/packagesH.html" class="GLASSlOLLIPOPS_a">
+            открыть
+          </a>
+        </span>
 
+      </div>
+      
       <!-- <div class="GLASSlOLLIPOPS_div">
         <div style="padding-left: 30px; margin-bottom: 20px;">
             старые задания
