--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -9,6 +9,9 @@
     <div style="display: flex; justify-content: space-between;">
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
     </div>
+    <div class="GLASSlOLLIPOPS_div">
+        <button class="GLASSlOLLIPOPS_button" id="br">получить</button>
+    </div>
 
 
     <script type="module" src="/src/all_packages-nodeJS/packagesT.ts"></script>
