--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -8,9 +8,21 @@
 <body>
     <div style="display: flex; justify-content: space-between;">
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
+        <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">открыть сервер</a>
     </div>
     <div class="GLASSlOLLIPOPS_div">
-        <button class="GLASSlOLLIPOPS_button" id="br">получить</button>
+        пример работы с сервером
+    </div>
+    <div class="GLASSlOLLIPOPS_div">
+        <!-- <div> -->
+            простые запросы
+        <!-- </div> -->
+        <span class="GLASSlOLLIPOPS_span">
+            <span class="marg">
+                открыть сервер
+            </span>
+            <button class="GLASSlOLLIPOPS_button" id="br">получить</button>
+        </span>
     </div>
 
 
