--- a/src/all_packages-nodeJS/packagesH.html
+++ b/src/all_packages-nodeJS/packagesH.html
@@ -8,15 +8,15 @@
 <body>
     <div style="display: flex; justify-content: space-between;">
         <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">exit</a>
-        <a href="../../index.html" class="GLASSlOLLIPOPS_a" style="margin: 30px;">открыть сервер</a>
+        <a href="https://github.com/andreyka101/Server---all_packages-nodeJS" class="GLASSlOLLIPOPS_a" style="margin: 30px;">открыть сервер</a>
     </div>
-    <div class="GLASSlOLLIPOPS_div">
+    <div class="GLASSlOLLIPOPS_div" style="text-align: center;">
         пример работы с сервером
     </div>
     <div class="GLASSlOLLIPOPS_div">
-        <!-- <div> -->
+        <div style="text-align: center; margin-bottom: 20px;">
             простые запросы
-        <!-- </div> -->
+        </div>
         <span class="GLASSlOLLIPOPS_span">
             <span class="marg">
                 открыть сервер
